[package]
name = "adbook"
version = "0.1.5"
authors = ["toyboot4e <toyboot4e@gmail.com>"]
edition = "2018"
exclude = ["/demo/*"]
keywords = ["book", "ssg", "asciidoc"]
license = "MIT"
repository = "https://github.com/toyboot4e/adbook"
description = "Creates a book from AsciiDoc files"

[dependencies]
# basic
log = "0.4.11"
anyhow = "1.0.33"
thiserror = "1.0.21"

# for implementation
serde = { version = "1.0.116", features = ["derive"] }
ron = "0.6.2"
colored = "2.0.0"
handlebars = "3.5.0"
futures = { version = "0.3.7", features = [] }
async-std = "1.6.5"

# for `cli` module
clap = "3.0.0-beta.2"

# for `main.rs`
fern = { version = "0.6.0", features = ["colored"] }
chrono = "0.4.19"

